url_service/url-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: urlservice
  namespace: url
  labels:
    app.kubernetes.io/name: urlservice
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: url-service
